# framework

./: .gitattributes  .gitignore  Dockerfile  pyproject.toml  requirements.txt
src/application/action/: action.md  builder.py  chat.py  click.test.py  close.py  create.py  cronjob.xml  delete.py  dropdown.py  editor.py  gather.py  github.xml  ide.py  iframe.py  include.py  input.py  load.py  login.py  logout.py  messenger.py  model.py  move.py  note.py  offcanvas.py  pagination.py  preview.py  refresh.py  registration.py  save.ts  swap.py  tab.py  table.py  terminal.py  uncheck.py  update.py
src/application/model/: action.py  amount.py  application.py  authorization.py  boolean.py  city.py  client.py  company.py  contact.py  container.py  contract.py  domain.py  error.py  event.py  file.py  gather.py  ide.py  identifier.py  integer.py  inventories.py  invoice.py  location.py  logic.py  machine.py  messenger.py  metadata.py  model.md  name.py  natural.py  note.py  password.py  payment.py  person.py  phone.py  repository.py  result.py  role.py  router.py  secret.py  server.py  (+13 more)
src/application/policy/: policy.md
src/application/policy/presentation/: route.xml  web.xml
src/application/repository/: containers.py  domains.py  file.py  inventories.py  notes.py  repository.py  secrets.py  servers.py  services.py  volumes.py
src/application/view/: view.md
src/application/view/component/: Chat.test.py  Column.xml  Editor.xml  IDE.xml  Row.xml  SideBar.xml
src/application/view/content/card/: container.xml
src/application/view/layout/: app.xml  base.html  base.xml  cardinal.xml  desktop.xml  index.html  mobile.xml  mono.xml  sidebar.xml  stack.xml  wasm.css  wasm.html  wasm.xml
src/application/view/page/: login.xml
src/application/view/page/auth/: dashboard.xml  index.xml  login copy.xml  login.xml  profile.xml  recovery.xml  registration.xml
src/application/view/page/cms/: overview.xml
src/application/view/page/crm/: overview.xml  sales.xml
src/application/view/page/erp/: billing.xml  clients.xml  contracts.xml  invoices.xml
src/application/view/page/inventory/: container.xml  containers.xml  domain.xml  domains.xml  overview.xml  policies.xml  policy.xml  repositories.xml  repository.xml  secrets.xml  service.xml  services.xml  virtual-machine.xml  virtual-machines.xml  volume.xml  volumes.xml
src/application/view/page/plan/: overview.xml
src/framework/manager/: defender.py  executor.py  messenger.py  presenter.py  storekeeper.py  tester.py
src/framework/port/: presentation.py
src/framework/service/: factory.py  factory.test.py  flow.py  language.py  language.test.py  loader.py  run.py  run.test.py  test.py
src/infrastructure/authentication/: oauth.py  supabase.py  supabase.test.py
src/infrastructure/message/: api.py
src/infrastructure/persistence/: api.py  api.test.py  jwt.py  jwt.test.py  supabase.py  web.test.py
src/infrastructure/presentation/: flutter.py  flutter.test.py  starlette.py  starlette.test.py  wasm.py  wasm.test.py
